--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,14 @@
   "version": "2.0.0-beta2",
   "devDependencies": {
     "moment": "2.5.1",
+    "moment-recur": "~1.0.0",
     "jquery": "~1.10.2",
     "jquery-ui": "~1.10.3",
     "jquery-simulate": "*",
     "jasmine-jquery": "~2.0.3",
     "jasmine-fixture": "~1.2.0"
+  },
+  "resolutions": {
+    "moment": "2.5.1"
   }
 }
