Moved moment-range to its own legitimately-forked repo.

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "moment": "2.5.1",
     "moment-recur": "~1.0.0",
+    "moment-range": "scottpledger/moment-range#master",
     "jquery": "~1.10.2",
     "jquery-ui": "~1.10.3",
     "jquery-simulate": "*",
