--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "html5calendar",
-  "version": "2.0.0-beta2",
+  "version": "0.0.1-alpha1",
   "devDependencies": {
     "moment": "2.5.1",
     "moment-recur": "~1.0.0",
