--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html5calendar",
-  "version": "2.0.0-beta2",
+  "version": "0.0.1-alpha1",
   "repository": {
     "type": "git",
     "url": "https://github.com/scottpledger/fullcalendar.git"
