--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lumbar": "~2.0.0-beta19",
     "karma": "^0.12.1",
     "karma-jasmine": "^0.2.2",
-    "karma-phantomjs-launcher": "^0.1.2"
+    "karma-phantomjs-launcher": "^0.1.2",
+    "grunt-github-pages": "0.0.4"
   },
   "scripts": {
     "install": "bower install"
